<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/help_button_1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text_1" />

    <TextView
        android:id="@+id/help_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_text_1_view"        
        android:visibility="gone"
        />

    <Button
        android:id="@+id/help_button_2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text_2" />

    <TextView
        android:id="@+id/help_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_text_2_view"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/help_button_3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text_3" />



<TextView
    android:id="@+id/help_view_3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/help_text_3_view"
    android:visibility="gone"
        />

</LinearLayout>