<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <FrameLayout
      android:id="@+id/cameraPreview"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1" />

  <TextView
    android:id="@+id/scanText"
    android:text="@string/scanning"
    android:layout_height="wrap_content" 
    android:layout_width="match_parent">
  </TextView>

  <Button
      android:id="@+id/ScanButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/scan_qr_code" />
  <Button
      android:id="@+id/WifiButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/connect_wifi" />
  <Button 
      android:id="@+id/LocationButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/scan_location"/>

</LinearLayout>