<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout_pathfinder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2"
    tools:context=".PathFinder" 
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/linearLayout_pulldowncontainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">        
		<TextView 	android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/From"
					android:textSize="18sp" 
					android:textStyle="bold"
					/>
        <Spinner
            android:id="@+id/startLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"                />
        
        <TextView 	android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/To"
					android:textSize="18sp" 
					android:textStyle="bold"
					/>

        <Spinner
            android:id="@+id/destLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/pulldown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pulldown"
        android:src="@drawable/pulldown_bar_extended"
        android:layout_below="@id/linearLayout_pulldowncontainer"/>

    <com.NioSync.pathfinder.MapView
        android:id="@+id/map_container"
        android:layout_width="273dp"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/pulldown" />
    
    
    <FrameLayout
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
        
    <com.NioSync.pathfinder.MapView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:visibility="invisible" />
    
    </FrameLayout>

</RelativeLayout>